--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,29 @@
-version: '3.8'
-
 services:
   app:
-    container_name: whatsapp_web_api
-    # build: .
-    image: chrishubert/whatsapp-web-api:latest # Pull the image from Docker Hub
+    container_name: wa-api
+    build: .
+    # image: chrishubert/whatsapp-web-api:latest # Pull the image from Docker Hub
     restart: always
     ports:
-      - "3000:3000"
+      - ${PORT}:3000
     environment:
-      # - API_KEY=your_global_api_key_here  # OPTIONAL
-      - BASE_WEBHOOK_URL=http://localhost:3000/localCallbackExample
-      - ENABLE_LOCAL_CALLBACK_EXAMPLE=TRUE # OPTIONAL, NOT RECOMMENDED FOR PRODUCTION
-      - MAX_ATTACHMENT_SIZE=5000000 # IN BYTES
-      - SET_MESSAGES_AS_SEEN=TRUE # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
+      ## Application ##    
+      - PORT=${PORT}
+      - API_KEY=${API_KEY}  # OPTIONAL
+      - WEBHOOK_B4A_APP_ID=${WEBHOOK_B4A_APP_ID} 
+      - WEBHOOK_B4A_CLIENT_KEY=${WEBHOOK_B4A_CLIENT_KEY} 
+      - BASE_WEBHOOK_URL=${BASE_WEBHOOK_URL}
+      - ENABLE_LOCAL_CALLBACK_EXAMPLE=${ENABLE_LOCAL_CALLBACK_EXAMPLE} # OPTIONAL, NOT RECOMMENDED FOR PRODUCTION
+      - RATE_LIMIT_MAX=${RATE_LIMIT_MAX} # OPTIONAL, THE MAXIUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
+      - RATE_LIMIT_WINDOW_MS=${RATE_LIMIT_WINDOW_MS} # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED IN MS
+      ## Client ##
+      - MAX_ATTACHMENT_SIZE=${MAX_ATTACHMENT_SIZE} # IN BYTES
+      - SET_MESSAGES_AS_SEEN=${SET_MESSAGES_AS_SEEN} # WILL MARK THE MESSAGES AS READ AUTOMATICALLY
       # ALL CALLBACKS: auth_failure|authenticated|call|change_state|disconnected|group_join|group_leave|group_update|loading_screen|media_uploaded|message|message_ack|message_create|message_reaction|message_revoke_everyone|qr|ready|contact_changed
-      - DISABLED_CALLBACKS=message_ack|message_reaction  # PREVENT SENDING CERTAIN TYPES OF CALLBACKS BACK TO THE WEBHOOK
-      - ENABLE_SWAGGER_ENDPOINT=TRUE # OPTIONAL, ENABLES THE /api-docs ENDPOINT
-      # - RATE_LIMIT_MAX=1000 # OPTIONAL, THE MAXIUM NUMBER OF CONNECTIONS TO ALLOW PER TIME FRAME
-      # - RATE_LIMIT_WINDOW_MS=1000 # OPTIONAL, TIME FRAME FOR WHICH REQUESTS ARE CHECKED IN MS
-      # - WEB_VERSION='2.2328.5' # OPTIONAL, THE VERSION OF WHATSAPP WEB TO USE
-      # - WEB_VERSION_CACHE_TYPE=none # OPTIONAL, DETERMINES WHERE TO GET THE WHATSAPP WEB VERSION(local, remote or none), DEFAULT 'none'
-      # - RECOVER_SESSIONS=TRUE # OPTIONAL, SHOULD WE RECOVER THE SESSION IN CASE OF PAGE FAILURES
+      - DISABLED_CALLBACKS=${DISABLED_CALLBACKS} # PREVENT SENDING CERTAIN TYPES OF CALLBACKS BACK TO THE WEBHOOK
+      - WEB_VERSION=${WEB_VERSION} # OPTIONAL, THE VERSION OF WHATSAPP WEB TO USE
+      - WEB_VERSION_CACHE_TYPE=${WEB_VERSION_CACHE_TYPE} # OPTIONAL, DETERMINES WHERE TO GET THE WHATSAPP WEB VERSION(local, remote or none), DEFAULT 'none'
+      - RECOVER_SESSIONS=${RECOVER_SESSIONS} # OPTIONAL, SHOULD WE RECOVER THE SESSION IN CASE OF PAGE FAILURES
+      - ENABLE_SWAGGER_ENDPOINT=${ENABLE_SWAGGER_ENDPOINT} # OPTIONAL, ENABLES THE /api-docs ENDPOINT      
     volumes:
-      - ./sessions:/usr/src/app/sessions # Mount the local ./sessions/ folder to the container's /usr/src/app/sessions folder
+      - ${SESSIONS_PATH}:/usr/src/app/sessions # Mount the local ./sessions/ folder to the container's /usr/src/app/sessions folder
